# backend

./: .env.default  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  setup.cfg
.github/workflows/: docker-publish.yml
backend/: __main__.py  app.py  auth.py  cities.py  config.py  db.py  errors.py  models.py  schemas.py  user.py
backend/repos/: cities.py  place.py  route.py  travel.py  user.py
backend/views/: cities.py  place.py  route.py  travel.py  user.py
migrations/: env.py
migrations/versions/: 33b88cf38af4_.py  41ab4c801e53_unique_constr_added_for_routes.py  80ab071d8611_initial.py  b10719706202_column_duration_added_for_route_place.py  b212c2faf53d_.py
tests/: conftest.py  factories.py  test_e2e.py
tests/test_e2e/: test_city.py
tests/test_repos/: test_city.py
