[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Valexandrin <alex-vadim@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
wemake-python-styleguide = "^0.16.0"
bandit = "1.7.2"
sqlalchemy-stubs = "^0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
